--- a/.github/workflows/main-dev.yaml
+++ b/.github/workflows/main-dev.yaml
@@ -11,6 +11,13 @@ permissions:
   contents: read  # This is required for actions/checkout
 
 # build docker image , # push docker image to ecr 
+env:
+  AWS_REGION: us-east-1
+  ECR_REPOSITORY: test-sotaicg-platform-base
+  ECS_SERVICE: test-sotaicg-platform-ecs-crawler
+  ECS_CLUSTER: test-sotaicg-platform-ecs-crawler
+  ECS_TASK_DEFINITION: .aws/task-definition.json
+  CONTAINER_NAME: "app"
 
 jobs:
   build:
@@ -39,4 +46,23 @@ jobs:
         IMAGE_TAG: ${{ github.sha }}
       run: |
         docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-        docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG   
+        docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG  
+    
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Fill in the new image ID in the Amazon ECS task definition
+      id: task-def
+      uses: aws-actions/amazon-ecs-render-task-definition@v1
+      with:
+        task-definition: ${{ env.ECS_TASK_DEFINITION }}
+        container-name: ${{ env.CONTAINER_NAME }}
+        image: ${{ steps.build-image.outputs.image }}
+        
+    - name: Deploy Amazon ECS task definition
+      uses: aws-actions/amazon-ecs-deploy-task-definition@v2
+      with:
+        task-definition: ${{ steps.task-def.outputs.task-definition }}
+        service: ${{ env.ECS_SERVICE }}
+        cluster: ${{ env.ECS_CLUSTER }}
+        wait-for-service-stability: true
