--- a/.github/workflows/main-dev.yaml
+++ b/.github/workflows/main-dev.yaml
@@ -15,9 +15,9 @@ env:
   AWS_REGION: us-east-1
   ECR_REPOSITORY: test-sotaicg-platform-base
   ECS_SERVICE: test-sotaicg-platform-ecs-crawler
-  ECS_CLUSTER: test-sotaicg-platform-ecs-crawler
+  ECS_CLUSTER: copute-ecs-cluster
   ECS_TASK_DEFINITION: .aws/task-definition.json
-  CONTAINER_NAME: "app"
+  CONTAINER_NAME: "test-sotaicg-platform-ecs-crawler"
 
 jobs:
   build:
@@ -48,9 +48,6 @@ jobs:
         docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
         docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG  
     
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
