--- a/.github/workflows/main-dev.yaml
+++ b/.github/workflows/main-dev.yaml
@@ -47,7 +47,8 @@ jobs:
         IMAGE_TAG: ${{ github.sha }}
       run: |
         docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-        docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG  
+        docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+        echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
     
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
