--- a/.github/workflows/main-dev.yaml
+++ b/.github/workflows/main-dev.yaml
@@ -16,7 +16,7 @@ env:
   ECR_REPOSITORY: test-sotaicg-platform-base
   ECS_SERVICE: test-sotaicg-platform-ecs-crawler
   ECS_CLUSTER: copute-ecs-cluster
-  ECS_TASK_DEFINITION: .aws/task-definition.json
+  ECS_TASK_DEFINITION: task-definition.json
   CONTAINER_NAME: "test-sotaicg-platform-ecs-crawler"
 
 jobs:
