--- a/.github/workflows/main-dev.yaml
+++ b/.github/workflows/main-dev.yaml
@@ -52,8 +52,11 @@ jobs:
 
     - name: Download task definition
       run: |
-          aws ecs describe-task-definition --task-definition ${{ env.ECS_TASK_DEFINITION }} \
+          aws ecs describe-task-definition \
+          --task-definition test-sotaicg-platform-ecs-crawler \
+          --region us-east-1 \
           --query taskDefinition > task-definition.json
+
           
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
